--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="id">
  <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistem Absensi Multi-User</title>
   <script src="/_sdk/data_sdk.js"></script>
